--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,13 @@
 .app {
-  color : green;
+  max-width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: inherit;
+}
+
+.main {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
 }
