--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,14 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  font-family: monospace;
+  min-height: 100vh;
+  font-size: 16px;
+}
+
+#root {
+  min-height: inherit;
+}
+
