--- a/src/App.scss
+++ b/src/App.scss
@@ -4,11 +4,11 @@
   display: flex;
   flex-direction: column;
   min-height: inherit;
+  position: relative;
 }
 
 .main {
   display: flex;
   justify-content: space-between;
   flex-grow: 1;
-  padding: 0 10px;
 }
