--- a/src/components/AddAdsModal/AddAdsModal.scss
+++ b/src/components/AddAdsModal/AddAdsModal.scss
@@ -73,9 +73,10 @@
           font-size: 16px;
         }
 
-        input {
+        input, textarea {
           padding: 6px 12px;
-          width: 250px;
+          max-width: 350px;
+          width: 100%;
           outline: none;
           border-radius: 4px;
           border: 2px solid var(--blue-04);
@@ -83,6 +84,10 @@
           &:focus {
             border: 2px solid var(--blue);
           }
+        }
+
+        textarea {
+          resize: none;
         }
 
         &-error {
