--- a/src/components/AddAdsModal/AddAdsModal.scss
+++ b/src/components/AddAdsModal/AddAdsModal.scss
@@ -1,30 +1,57 @@
 .ads-modal {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   backdrop-filter: blur(4px);
   z-index: 1000;
-
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
 
   &__body {
     width: 80%;
-    height: 80%;
+    height: 800px;
     background-color: var(--grey-light-08);
     border-radius: 8px;
     border: 2px solid var(--blue);
     padding: 20px;
+    position: relative;
 
     &-header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       margin-bottom: 40px;
+    }
+
+    &-loading {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      font-size: 24px;
+      color: var(--blue);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2;
+      backdrop-filter: blur(10px);
+    }
+
+    &-error {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      font-size: 24px;
+      color: red;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2;
+      backdrop-filter: blur(10px);
     }
 
     &-title {
@@ -41,14 +68,12 @@
       align-items: center;
       position: relative;
       cursor: pointer;
-      
 
       &-item {
         width: 80%;
         height: 2px;
         background-color: var(--orange);
         position: absolute;
-        
 
         &:first-child {
           transform: rotate(-45deg);
@@ -73,7 +98,8 @@
           font-size: 16px;
         }
 
-        input, textarea {
+        input,
+        textarea {
           padding: 6px 12px;
           max-width: 350px;
           width: 100%;
@@ -96,6 +122,16 @@
           font-size: 12px;
           color: red;
         }
+      }
+
+      input::-webkit-outer-spin-button,
+      input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+
+      input[type="number"] {
+        -moz-appearance: textfield;
       }
     }
   }
