--- a/src/index.scss
+++ b/src/index.scss
@@ -14,12 +14,12 @@
 
 body {
   font-family: monospace;
-  min-height: 100vh;
+  height: 100vh;
   font-size: 16px;
 }
 
 #root {
-  min-height: inherit;
+  height: 100vh;
 }
 
 .container {
