--- a/src/components/AddAdsModal/AddAdsModal.scss
+++ b/src/components/AddAdsModal/AddAdsModal.scss
@@ -86,6 +86,41 @@
     }
 
     &-form {
+
+      &-wrapper {
+        display: flex;
+        gap: 20px;
+      }
+
+      &-info {
+        width: 50%;
+      }
+
+      &-picture {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+
+        input {
+          margin-bottom: 20px;
+        }
+
+        &-preview-container {
+          max-width: 350px;
+          width: 100%;
+          height: 350px;
+          overflow-y: auto;
+
+          &-image {
+            width: 100%;
+            height: auto;
+          }
+        }
+      }
+
       &-item {
         margin-bottom: 30px;
         position: relative;
@@ -121,6 +156,13 @@
           bottom: -20px;
           font-size: 12px;
           color: red;
+
+          &-img {
+            position: absolute;
+          top: 20px;
+          font-size: 14px;
+          color: red;
+          }
         }
       }
 
