--- a/src/components/AddAdsModal/AddAdsModal.scss
+++ b/src/components/AddAdsModal/AddAdsModal.scss
@@ -119,6 +119,7 @@
           width: 100%;
           height: 350px;
           overflow-y: auto;
+          margin-bottom: 30px;
 
           &-image {
             width: 100%;
