--- a/src/App.scss
+++ b/src/App.scss
@@ -12,4 +12,19 @@
   display: flex;
   justify-content: space-between;
   flex-grow: 1;
+  position: relative;
+
+  &__loading {
+    font-size: 36px;
+    color: var(--blue);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 15000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
